--- a/src/pug/layout/base.pug
+++ b/src/pug/layout/base.pug
@@ -7,7 +7,9 @@ html(lang='en')
          name='viewport'
       )
       title Document
+      link(href='./css/styles.css' rel='stylesheet')
    body
       include ../includes/header
          block content
       include ../includes/footer
+      script(src='./js/scripts.js')
